Closed Bug 29440 Opened 25 years ago Closed 25 years ago

[FIX]onChange() handler on select object not being fired

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P3)

Other
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: xtim, Assigned: rods)

Details

(Whiteboard: fix in my tree)

Attachments

(2 files)

The onChange() handler is only being fired when the mouse is used to select an item. The onChange handler is not being fired when the keyboard is used. Using MSIE it fires in both instances.
xtim, do you have a test case handy? What build(s) show this problem? Thanks :)
Probem demonstrated in file, bug confirmed, marking as NEW.
Status: UNCONFIRMED → NEW
Ever confirmed: true
xtim@cobber.com are you still seeing this problem with current builds?
updating component and owner.
Assignee: cbegle → joki
Component: Browser-General → Event Handling
QA Contact: asadotzler → janc
comments from reporter via email: This bug is present in M14 it is also present in the latest Linux build that I can run 2000-03-21-09-M15. This one also seems to have numerous other problems which I assume are the result of work in progress. Regards, Tim.
This bug still exist in build of Mar 27. The application appears to have regressed in other ways since M14 but the specific problem reported and demonstrated in the attachment still exist.
Rod, seems like this would be yours.
Assignee: joki → rods
mass-move to M16
Target Milestone: --- → M16
Please attach an html example I haven't been able to open the tar file.
Fix is in my tree
Status: NEW → ASSIGNED
Summary: onChange() handler on select object not being fired → [FIX]onChange() handler on select object not being fired
Whiteboard: fix in my tree
fixed
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Mass update: changing qacontact to ckritzer@netscape.com
QA Contact: janc → ckritzer
Updating QA Contact.
QA Contact: ckritzer → lorca
Reassigning QA Contact for all open and unverified bugs previously under Lorca's care to Gerardo as per phone conversation this morning.
QA Contact: lorca → gerardok
QA contact updated
QA Contact: gerardok → madhur
verified on build 2001-08-06-03-trunk
Status: RESOLVED → VERIFIED
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: