Add ifdef'ed Performance Reflow Counting code also added asserts for improper sizes being passed back in reflow send onChange events on all navigation bug 29440